# Self-Parking-Car

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  SECURITY.md  add_vehicle.py  attach_camera.py  birds_eye_view_calibration.py  camera_config.py  camera_configs.json  camera_configs_manager.py  camera_locations.py  camera_processing.py  clean_build.ps1  connect_to_carla.py  demo.py  generate_protos.bat  generate_protos.sh  instructions.md  ipc_build.ps1  ipc_configs.proto  ipc_dependencies_build.ps1  ipc_grpc_build.ps1  listen_to_image.py  main.py  model_database.db  pygame example.py  run.py  run_tests.ps1  test.py
.github/workflows/: CI.yaml  build_dependencies.yaml  build_grpc.yaml  grpc_pre_setup.yaml  grpc_test.yaml  grpc_tests.yaml
Birds_Eye_View/: birds_eye_view_calibration.py  camera_configs.json  camera_locations.py  camera_processing.py  run.py
Carla_Controls/: add_vehicle.py  attach_camera.py  connect_to_carla.py
birds_eye_view/: BEV_field_labeller.py  birds_eye_view_calibration.py  camera_configs.json  camera_configs_modifier.py  camera_location.py  camera_locations.json  camera_locations.py  camera_processing.py  camera_properties_calibration.py  comb_surface_access.py  run.py  top_down_surface_access.py
carla_controls/: abstract_command.py  add_labeller_camera.py  add_vehicle.py  attach_camera.py  connect_to_carla.py
data_collection/: camera_world.py  parking_labeller.py  run.py  test_3d_ray_cast.py  utils_labeller.py
grpc_proto_spare_files/: ipc_configs.grpc.pb.cc  ipc_configs.pb.h  ipc_configs_pb2.py  ipc_configs_pb2_grpc.py
ml/database/: model_database_maker.py  model_database_provider.py  run.py
ml/ml_io/: dataset_loader.py  parking_spot.py  parking_spot_image.py  transform.py
ml/training/: model_training.py
model/: model_database_maker.py
model/Database/: model_database_provider.py
parking_spot_labeller/: Readme.md  run.py  spots_data.json  utils_labeller.py
python_IPC/: IPC_client.py  IpcClient.py  client.py  configs.proto  ipc_configs.proto  ipc_configs_pb2.py  ipc_configs_pb2_grpc.py
src/: CMakeLists.txt  ipc_configs.pb.cc  server.cpp
src/auto_spawn_utils/: auto_spawn.cpp  run_auto_spawn.cpp
src/auto_spawn_utils/include/: auto_spawn.h
src/auto_spawn_utils/src/: auto_spawn.cpp
src/glfw/glad/: glad.c  glad.h
src/grpc_processing_utils/: grpc_data_processor.cpp
src/grpc_processing_utils/include/: grpc_data_processor.h
src/grpc_server/: run_server.cpp
src/grpc_server/include/: ipc_configs.grpc.pb.cc  ipc_configs.grpc.pb.h  ipc_configs.pb.cc  ipc_configs.pb.h  server.h
src/grpc_server/src/: server.cpp
src/gui_app/: CMakeLists.txt  gui_app.cpp  gui_app.h
src/gui_app/test_app/: CMakeLists.txt  imgui.ini  test_app.cpp
src/include/: ipc_configs.grpc.pb.h  ipc_configs.pb.cc  ipc_configs.pb.h
src/include/gui_app/: gui_app.h
src/include/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/libcarla/: DebugUtils-d.lib  DebugUtils.lib  Detour-d.lib  Detour.lib  DetourCrowd-d.lib  DetourCrowd.lib  DetourTileCache-d.lib  DetourTileCache.lib  Recast-d.lib  Recast.lib  carla_client.lib  carla_client_debug.lib  libboost_atomic-vc142-mt-x64-1_80.lib  libboost_atomic-vc142-mt-x64-1_83.lib  libboost_date_time-vc142-mt-x64-1_80.lib  libboost_date_time-vc142-mt-x64-1_83.lib  libboost_filesystem-vc142-mt-x64-1_80.lib  libboost_filesystem-vc143-mt-gd-x64-1_80.lib  libboost_numpy310-vc142-mt-x64-1_83.lib  libboost_numpy39-vc142-mt-x64-1_80.lib  libboost_python310-vc142-mt-x64-1_83.lib  libboost_python39-vc142-mt-x64-1_80.lib  libboost_system-vc142-mt-x64-1_80.lib  libboost_system-vc142-mt-x64-1_83.lib  libpng.lib  proj.lib  rpc.lib  sqlite3.lib  xerces-c_3.lib  zlib.lib  zlibstatic.lib
src/libcarla/include/carla/: Version.h
src/test/: auto_spawn_test.cpp  file_utils_test.cpp  grpc_data_processor_test.cpp
src/test_app/: CMakeLists.txt  test_app.cpp
src/utils/: fileUtils.cpp  file_utils.cpp
src/utils/carla_utils/: CMakeLists.txt
src/utils/carla_utils/include/: carla_utils.h
src/utils/carla_utils/src/: carla_utils.cpp
src/utils/file_utils/: CMakeLists.txt  file_utils_build.ps1
src/utils/file_utils/include/: file_utils.h
src/utils/file_utils/src/: file_utils.cpp
src/utils/structs/: BoundingBox.h  GrpcData.h
utils/: add_vehicle.py  attach_camera_car.py  cmd.py  connect_to_carla.py
