cmake_minimum_required(VERSION 3.23)
set(CMAKE_CXX_STANDARD 17)
project(IPC_lib CXX C)

set(OpenCV_DIR ${CMAKE_CURRENT_LIST_DIR}/build_opencv)
set(gRPC_DIR ${CMAKE_CURRENT_LIST_DIR}/build_grpc/install_grpc/lib/cmake/grpc)
set(absl_DIR ${CMAKE_CURRENT_LIST_DIR}/build_grpc/install_grpc/lib/cmake/absl)
set(protobuf_DIR ${CMAKE_CURRENT_LIST_DIR}/build_grpc/install_grpc/cmake)
set(utf8_range_DIR ${CMAKE_CURRENT_LIST_DIR}/build_grpc/install_grpc/lib/cmake/utf8_range)
set(CARLA_LIB_PATH ${CMAKE_CURRENT_LIST_DIR}/libcarla)
set(protobuf_source "./grpc_server/include/ipc_configs.pb.cc" "./grpc_server/include/ipc_configs.grpc.pb.cc" "./grpc_processing_utils/grpc_data_processor.cpp")

find_package(OpenCV REQUIRED)
find_package(utf8_range CONFIG REQUIRED)
find_package(protobuf CONFIG)
find_package(gRPC CONFIG REQUIRED)

add_subdirectory(googletest)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utils/file_utils)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utils/carla_utils)

link_directories(libcarla)
link_directories(glfw)

include_directories(grpc_server/include/ipc_configs.pb.h)
include_directories(grpc_server/include/ipc_configs.grpc.pb.h)
include_directories(grpc_server/include/server.h)
include_directories(grpc_processing_utils/include/grpc_data_processor.h)
include_directories(${CMAKE_CURRENT_LIST_DIR}/build_grpc/install_grpc/include)
include_directories(${CMAKE_CURRENT_LIST_DIR}/libcarla/include)
include_directories(${CMAKE_CURRENT_LIST_DIR}/libcarla/include/system)
include_directories(${CMAKE_CURRENT_LIST_DIR}/glfw)
include_directories(auto_spawn_utils/include/auto_spawn.h)

add_subdirectory(gui_app)
add_subdirectory(test_app)

add_executable(ipc_server ./grpc_server/run_server.cpp ${protobuf_source})
add_executable(grpc_test ./test/grpc_data_processor_test.cpp ${protobuf_source})
add_executable(file_utils_test ./test/file_utils_test.cpp)
add_executable(auto_spawn ./auto_spawn_utils/run_auto_spawn.cpp ./grpc_server/src/server.cpp ${protobuf_source})
add_executable(auto_spawn_test ./test/auto_spawn_test.cpp ./auto_spawn_utils/src/auto_spawn.cpp ./grpc_server/src/server.cpp ${protobuf_source})

message(PROJECT_SOURCE_DIR="${OpenCV_LIBS}")

target_link_libraries(ipc_server FileUtilsLib gRPC::grpc++ ${OpenCV_LIBS})
target_link_libraries(grpc_test FileUtilsLib GTest::gtest gmock gmock_main GTest::gtest_main gRPC::grpc++ ${OpenCV_LIBS})
target_link_libraries(file_utils_test FileUtilsLib GTest::gtest gmock gmock_main GTest::gtest_main)
target_link_options(auto_spawn PRIVATE "/NODEFAULTLIB:MSVCRT")
target_link_libraries(auto_spawn FileUtilsLib ${OpenCV_LIBS} CarlaUtils gRPC::grpc++)
target_link_libraries(auto_spawn_test ${OpenCV_LIBS} FileUtilsLib CarlaUtils gRPC::grpc++ GTest::gtest gmock gmock_main GTest::gtest_main)